# fab7

./: .gitignore  AGENTS.md  README.md  RUNBOOK.md  install.sh  pyproject.toml
.github/workflows/: ci.yaml
action/: README.md  action.yml
core/fab7/: __init__.py  __main__.py  build-requirements.txt  cli.py  errors.py  extension_package.py  extension_scaffold.py  extensions.py  gate.py  git.py  hosts.py  install.py  ledger.py  native_build.py  release_build.py  toolchain.py
core/fab7/extension/: __init__.py  lifecycle.py  package.py  scaffold.py
core/fab7/plugin/: __init__.py  adapter.py  build.py  claude_adapter.py  codex_adapter.py
core/fab7/templates/extension/: fab7-extension.json.tmpl  pyproject.toml.tmpl
core/tests/: conftest.py  test_action.py  test_artifact.py  test_cli.py  test_distribution.py  test_ext_create.py  test_extension_install.py  test_extensions.py  test_gate.py  test_hosts.py  test_ledger.py  test_plugin_build.py  test_toolchain.py
docs/: README.md  status.yaml
docs/architecture/: distribution.md  ledger.md  overview.md
docs/plans/: ext-create.md  ext-registry.md  extension-source-reset.md  marketplace-migration.md  onboarding.md  uv-migration.md
docs/product/: roadmap.md  vision.md
plugins/claude/fab7/.claude-plugin/: plugin.json
plugins/claude/fab7/commands/: ext-install.md  ext-list.md  init.md
plugins/codex/fab7/.codex-plugin/: plugin.json
plugins/fab7/actions/ext-create/: SKILL.md.tmpl
plugins/fab7/actions/ext-install/: SKILL.md.tmpl
scripts/: build_zipapp.py  zipapp_main.py
(+8 files in other folders)
