[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fab7-cli"
version = "0.2.1"
description = "Fab7 Git-native claim, evidence, and merge gate."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Fab7" }]
dependencies = []

[project.scripts]
fab7 = "fab7.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
required-version = "==0.6.14"

[tool.setuptools]
package-dir = { "" = "core" }

[tool.setuptools.packages.find]
where = ["core"]
include = ["fab7*"]

[tool.pytest.ini_options]
pythonpath = ["core"]
testpaths = ["core/tests"]
addopts = "-q"
