[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fab7-cli"
version = "0.4.0"
description = "Fab7 Git-native claim, evidence, and merge gate."
readme = "README.md"
requires-python = "==3.14.*"
license = "MIT"
authors = [{ name = "Fab7" }]
dependencies = []

[project.scripts]
fab7 = "fab7.cli:main"

[dependency-groups]
dev = ["pytest>=8"]
build = ["pyinstaller==6.21.0"]

[tool.fab7]
recommended-uv-version = "0.11.29"

[tool.setuptools]
package-dir = { "" = "core" }

[tool.setuptools.packages.find]
where = ["core"]
include = ["fab7*"]

[tool.setuptools.package-data]
fab7 = ["build-requirements.txt", "templates/**/*.tmpl"]

[tool.pytest.ini_options]
pythonpath = ["core"]
testpaths = ["core/tests"]
addopts = "-q"
